[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]

[project]
authors = [{ email = "allen.goodman@icloud.com", name = "Allen Goodman" }]
dependencies = [
    "pooch",
    "torch",
    "tqdm",
]
dynamic = ["version"]
license = { file = "LICENSE" }
name = "beignet"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "beignet[datasets,docs,mdtraj,test]",
]
datasets = [
    "biopython",
    "lmdb",
    "pandas",
    "pooch",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
mdtraj = [
    "mdtraj",
]
test = [
    "hypothesis",
    "numpy==1.26.4",
    "pytest",
    "pytest-mock",
    "scipy",
]

[tool.ruff]
lint.select = [
    "B",  # FLAKE8-BUGBEAR
    "E",  # PYCODESTYLE ERRORS
    "F",  # PYFLAKES
    "I",  # ISORT
    "W",  # PYCODESTYLE WARNINGS
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # MODULE IMPORTED BUT UNUSED
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
