[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]

[project]
authors = [{ email = "allen.goodman@icloud.com", name = "Allen Goodman" }, { email = "kleinhej@gene.com", name = "Joseph Kleinhenz" }]
dependencies = [
    "biotite",
    "einops>=0.8.1",
    "fastpdb",
    "numpy>=2",
    "optree",
    "pooch",
    "torch",
    "tqdm",
]
dynamic = ["version"]
license = { file = "LICENSE" }
name = "beignet"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "beignet[datasets,docs,mdtraj,test]",
]
datasets = [
    "biopython",
    "lmdb",
    "pandas",
    "pooch",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
mdtraj = [
    "mdtraj",
    "netcdf4",
]
test = [
    "hypothesis",
    "pytest",
    "pytest-mock",
    "scipy",
]

[tool.ruff.lint]
select = [
    "B",  # FLAKE8-BUGBEAR
    "E",  # PYCODESTYLE ERRORS
    "F",  # PYFLAKES
    "I",  # ISORT
    "W",  # PYCODESTYLE WARNINGS
    "UP006", # non-pep585-annotation
]

ignore = [
    "E501",  # line too long, handled by format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # MODULE IMPORTED BUT UNUSED
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython",
]
